redone tokens, lexer & utils

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,12 +5,11 @@ set(CMAKE_C_STANDARD 99)
 
 add_executable(Valt
         src/main.c
-        src/inc/token.h
-        src/inc/lexer.h
         src/inc/valt.h
         src/inc/utils.h
-        src/inc/ast.h
-        src/ast.c
         src/utils.c
+        src/inc/token.h
+        src/token.c
+        src/inc/lexer.h
         src/lexer.c
 )
